Fix sale banner on mobile

--- a/client/jetpack-cloud/sections/pricing/jpcom-masterbar/style.scss
+++ b/client/jetpack-cloud/sections/pricing/jpcom-masterbar/style.scss
@@ -133,7 +133,7 @@
 	@media ( max-width: 900px ) {
 		.header {
 			position: relative;
-			padding: 1.5rem 0;
+			padding: 0;
 			height: auto;
 			background-color: var(--studio-white);
 		}
@@ -155,7 +155,14 @@
 	}
 
 	.header__content-wrapper {
+		position: relative;
 		width: 100%;
+	}
+
+	@media ( max-width: 900px ) {
+		.header__content-wrapper {
+			padding: 1.5rem 0;
+		}
 	}
 
 	.header__content-background-wrapper {
